# urichDemo

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
auth/: application.py  domain.py  infrastructure.py  models.py  module.py  password.py  service.py
database/: module.py
employees/: __init__.py  domain.py  infrastructure.py  models.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: EmployeesPage.tsx  LoginPage.tsx  TasksPage.tsx
rust/: Cargo.toml  Dockerfile  README.md
rust/src/: lib.rs  main.rs  middleware.rs
rust/src/auth/: application.rs  mod.rs
rust/src/employees/: mod.rs  rpc_handler.rs
rust/src/shared/: database.rs  http_transport.rs  jwt_middleware.rs  mod.rs
rust/src/tasks/: mod.rs
services/: COMMUNICATION.md  README.md  docker-compose.yml
services/auth/: Dockerfile  infrastructure.py  main.py  models.py  module.py
services/employees/: Dockerfile  __init__.py  application.py  domain.py  infrastructure.py  main.py  models.py  module.py  rpc_handler.py
services/shared/: __init__.py  jwt_middleware.py
services/shared/database/: __init__.py  base.py  module.py
services/tasks/: Dockerfile  __init__.py  application.py  domain.py  infrastructure.py  main.py  models.py  module.py  ports.py
tasks/: __init__.py  infrastructure.py  models.py
